--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE HTML>
-<html>
 <head>
 <title>
 Yqloss's Applications
 </title>
+</head>
 <body>
-<a href="syobonaction.html">Syobon Action</a>
+<div id="container">
+<div id="header" style="background-color:#FFAF00;">
+<h1 style="margin-bottom:0;">
+Yqloss's Applications
+</h1>
+</div>
+<div id="menu" style="background-color:#FFDF00;float:left;height:1024px">
+<a href="https://yqloss.github.io">
+Go back
+</a>
+<br>
+<b>
+----Menu----
+</b>
+<br>
+<a href="SyobonAction.html">
+Syobon Action
+</a>
+</div>
+<div id="content">
+</div>
+<div id="footer" style="background-color:#FFAF00;clear:both;text-align:center;">
+Made by Yqloss
+</div>
+</div>
 </body>
 </html>
