--- a/syobonaction.html
+++ b/syobonaction.html
@@ -1,13 +1,41 @@
 <!DOCTYPE HTML>
-<html>
 <head>
 <title>
-Yqloss's Application - Syobon Action
+Yqloss's Applications
 </title>
 </head>
 <body>
-<a href="SyobonAction.exe">Download Syobon Action ( No sound )</a>
+<div id="container">
+<div id="header" style="background-color:#FFAF00;">
+<h1 style="margin-bottom:0;">
+Yqloss's Applications
+</h1>
+</div>
+<div id="menu" style="background-color:#FFDF00;float:left;height:1024px">
+<a href="https://yqloss.github.io">
+Go back
+</a>
 <br>
-<a href="SyobonActionWithSound.exe">Download Syobon Action</a>
+<b>
+----Menu----
+</b>
+<br>
+<a href="syobonaction.html">
+Syobon Action
+</a>
+</div>
+<div id="content">
+<a href="SyobonAction.exe">
+Download Syobon Action ( No sound )
+</a>
+<br>
+<a href="SyobonActionWithSound.exe">
+Download Syobon Action
+</a>
+</div>
+<div id="footer" style="background-color:#FFAF00;clear:both;text-align:center;">
+Made by Yqloss
+</div>
+</div>
 </body>
 </html>
