--- a/0.html
+++ b/0.html
@@ -23,6 +23,10 @@ Go back
 <a href="syobonaction.html">
 Syobon Action
 </a>
+<br>
+<a href="1.html">
+Visual C++ 6.0
+</a>
 </div>
 <div id="content">
 <a href="SyobonAction.exe">
