--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ Go back
 <a href="0.html">
 Syobon Action
 </a>
+<br>
+<a href="1.html">
+Visual C++ 6.0
+</a>
 </div>
 <div id="content">
 </div>
