--- a/1.html
+++ b/1.html
@@ -12,21 +12,6 @@ Yqloss's Applications
 </h1>
 </div>
 <div id="menu" style="background-color:#FFDF00;float:left;height:1024px">
-<a href="https://yqloss.github.io">
-Go back
-</a>
-<br>
-<b>
-----Menu----
-</b>
-<br>
-<a href="0.html">
-Syobon Action
-</a>
-<br>
-<a href="1.html">
-Visual C++ 6.0
-</a>
 </div>
 <div id="content">
 <a href="VisualC++6.0.exe">
@@ -37,5 +22,7 @@ Download Visual C++ 6.0
 Made by Yqloss
 </div>
 </div>
+<script src="https://yqloss.github.io/Applications/menu/js">
+</script>
 </body>
 </html>
