--- a/index.html
+++ b/index.html
@@ -12,21 +12,6 @@ Yqloss's Applications
 </h1>
 </div>
 <div id="menu" style="background-color:#FFDF00;float:left;height:1024px">
-<a href="https://yqloss.github.io">
-Go back
-</a>
-<br>
-<b>
-----Menu----
-</b>
-<br>
-<a href="0.html">
-Syobon Action
-</a>
-<br>
-<a href="1.html">
-Visual C++ 6.0
-</a>
 </div>
 <div id="content">
 </div>
@@ -34,5 +19,7 @@ Visual C++ 6.0
 Made by Yqloss
 </div>
 </div>
+<script src="https://yqloss.github.io/Applications/menu/js">
+</script>
 </body>
 </html>
