--- a/0.html
+++ b/0.html
@@ -26,7 +26,7 @@ Download Syobon Action
 Made by Yqloss
 </div>
 </div>
-<script src="https://yqloss.github.io/Applications/menu/js">
+<script src="https://yqloss.github.io/Applications/menu.js">
 </script>
 </body>
 </html>
