--- a/1.html
+++ b/1.html
@@ -22,7 +22,7 @@ Download Visual C++ 6.0
 Made by Yqloss
 </div>
 </div>
-<script src="https://yqloss.github.io/Applications/menu/js">
+<script src="https://yqloss.github.io/Applications/menu.js">
 </script>
 </body>
 </html>
