--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Yqloss's Applications
 Made by Yqloss
 </div>
 </div>
-<script src="https://yqloss.github.io/Applications/menu/js">
+<script src="https://yqloss.github.io/Applications/menu.js">
 </script>
 </body>
 </html>
