--- a/1.html
+++ b/1.html
@@ -14,7 +14,7 @@ Yqloss's Applications
 <div id="menu" style="background-color:#FFDF00;float:left;height:1024px">
 </div>
 <div id="content">
-<a href="VisualC++6.0.exe">
+<a href="https://yqloss.github.io/Applications/VisualC++6.0.exe">
 Download Visual C++ 6.0
 </a>
 </div>
