--- a/2.html
+++ b/2.html
@@ -14,13 +14,7 @@ Yqloss's Applications
 <div id="menu" style="background-color:#FFDF00;float:left;height:1024px">
 </div>
 <div id="content">
-<a href="https://yqloss.github.io/Applications/SyobonAction.exe">
-Download Syobon Action ( No sound )
-</a>
-<br>
-<a href="https://yqloss.github.io/Applications/SyobonActionWithSound.exe">
-Download Syobon Action
-</a>
+<a href="https://yqloss.github.io/Applications/CChess.exe">Download CChess</a>
 </div>
 <div id="footer" style="background-color:#FFAF00;clear:both;text-align:center;">
 Made by Yqloss
