--- a/enc.html
+++ b/enc.html
@@ -8,7 +8,7 @@
 <p id="b"/>
 <script>
 function encode(){
-document.getElementById("b").innerHTML="https://yqloss.github.io/j?"+btoa(document.getElementById("a").value);
+document.getElementById("b").innerHTML="https://yqloss.github.io/j/?"+btoa(document.getElementById("a").value);
 }
 </script>
 </body>
