--- a/enc.html
+++ b/enc.html
@@ -20,14 +20,21 @@
 </div>
 <p id="2.1">
 <script>
+function B64toURL(str){
+str.replace("A","AA");
+str.replace("+","AB");
+str.replace("/","AC");
+str.replace("-","AD");
+return str;
+}
 function encode0(){
-document.getElementById("0.1").innerHTML="https://yqloss.github.io/j/?"+btoa(document.getElementById("0.0").value);
+document.getElementById("0.1").innerHTML="https://yqloss.github.io/j/?"+B64toURL(btoa(document.getElementById("0.0").value));
 }
 function encode1(){
 document.getElementById("1.1").innerHTML=encodeURIComponent(document.getElementById("1.0").value);
 }
 function encode2(){
-document.getElementById("2.1").innerHTML="https://yqloss.github.io/j/?-"+btoa(encodeURIComponent(document.getElementById("2.0").value));
+document.getElementById("2.1").innerHTML="https://yqloss.github.io/j/?"+B64toURL("-"+btoa(encodeURIComponent(document.getElementById("2.0").value)));
 }
 </script>
 </body>
