--- a/enc.html
+++ b/enc.html
@@ -21,11 +21,11 @@
 <p id="2.1"></p>
 <script>
 function B64toURL(str){
-str.replace(/A/g,"AA");
-str.replace(/\+/g,"AB");
-str.replace(/\//g,"AC");
-str.replace(/\-/g,"AD");
-str.replace(/\=/g,"AE");
+str.replace(new RegExp("A","g"),"AA");
+str.replace(new RegExp("+","g"),"AB");
+str.replace(new RegExp("/","g"),"AC");
+str.replace(new RegExp("-","g"),"AD");
+str.replace(new RegExp("=","g"),"AE");
 return str;
 }
 function encode0(){
