--- a/enc.html
+++ b/enc.html
@@ -3,22 +3,22 @@
 <body>
 <h1>Encode URL</h1>
 <div>
-<input id="0.0"/>
+<input id="0.0" readonly="true"/>
 <button onclick="javascript:encode0();">Encode</button>
 </div>
-<p id="0.1"></p>
+<input id="0.1"/>
 <h1>Encode Unicode</h1>
 <div>
-<input id="1.0"/>
+<input id="1.0" readonly="true"/>
 <button onclick="javascript:encode1();">Encode</button>
 </div>
-<p id="1.1"></p>
+<input id="1.1"/>
 <h1>Encode String</h1>
 <div>
-<input id="2.0"/>
+<input id="2.0" readonly="true"/>
 <button onclick="javascript:encode2();">Encode</button>
 </div>
-<p id="2.1"></p>
+<input id="2.1"/>
 <script>
 function B64toURL(str){
 str=str.split("A").join("AA");
@@ -29,13 +29,13 @@ str=str.split("=").join("AE");
 return str;
 }
 function encode0(){
-document.getElementById("0.1").innerHTML="https://yqloss.github.io/j?"+B64toURL(btoa(document.getElementById("0.0").value))+"=";
+document.getElementById("0.1").value="https://yqloss.github.io/j?"+B64toURL(btoa(document.getElementById("0.0").value))+"=";
 }
 function encode1(){
-document.getElementById("1.1").innerHTML=encodeURIComponent(document.getElementById("1.0").value);
+document.getElementById("1.1").value=encodeURIComponent(document.getElementById("1.0").value);
 }
 function encode2(){
-document.getElementById("2.1").innerHTML="https://yqloss.github.io/j?"+B64toURL("-"+btoa(encodeURIComponent(document.getElementById("2.0").value)))+"=";
+document.getElementById("2.1").value="https://yqloss.github.io/j?"+B64toURL("-"+btoa(encodeURIComponent(document.getElementById("2.0").value)))+"=";
 }
 </script>
 </body>
